--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.dagger.hilt.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -52,6 +54,16 @@ dependencies {
     def fragment_version = "1.5.5"
     // Kotlin
     implementation("androidx.fragment:fragment-ktx:$fragment_version")
+
+    // Lottie
+    implementation 'com.airbnb.android:lottie:4.1.0'
+
+    //hilt
+    implementation 'com.google.dagger:hilt-android:2.44.2'
+    kapt 'com.google.dagger:hilt-compiler:2.44.2'
+
+    //indicator
+    implementation 'me.relex:circleindicator:2.1.6'
 
 
     implementation 'androidx.core:core-ktx:1.9.0'
